@@ -60,16 +60,15 @@ static int TelnetCheckConfigs(SnortConfig*, void* pData)
     if ((telnet_config->ayt_threshold > 0) &&
             !telnet_config->normalize)
     {
-         ErrorMessage("WARNING: Telnet Configuration Check: using an "
+         ParseWarning("telnet configuration check: using an "
                  "AreYouThere threshold requires telnet normalization to be "
                  "turned on.\n");
     }
     if ( telnet_config->detect_encrypted &&
             !telnet_config->normalize)
     {
-        ErrorMessage("WARNING: Telnet Configuration Check: checking for "
-                "encrypted traffic requires telnet normalization to be turned "
-                "on.\n");
+        ParseWarning("telnet configuration check: checking for "
+                "encrypted traffic requires telnet normalization to be turned on.\n");
     }
 
     return 0;
